# RustApi

./: .gitignore  Cargo.toml  Dockerfile  swagger.yaml
.clj-kondo/.cache/v1/java/: java.io.WinNTFileSystem.transit.json  java.lang.ProcessImpl.transit.json  java.lang.Shutdown.transit.json  java.net.DefaultDatagramSocketImplFactory.transit.json  java.net.DualStackPlainSocketImpl.transit.json  java.net.InetAddress.Cache.transit.json  java.net.InetAddress.CacheEntry.transit.json  java.net.InetAddress.transit.json  java.net.PlainSocketImpl.transit.json  java.net.TwoStacksPlainSocketImpl.transit.json  java.net.URL.transit.json
.lsp/.cache/: db.transit.json
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs  swagger.rs
