[build-dependencies]
cc = "1.0"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.5", features = ["mssql", "runtime-actix-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
utoipa = "3.0"
utoipa-swagger-ui = "3.0"
cc = "1.0"

[package]
name = "RustApi"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"