
[package]
name = "rust_api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
sqlx = { version = "0.5", features = ["mssql", "runtime-actix-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
actix-cors = "0.5"
swagger-ui = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15"
